<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_folder_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/document_background">

    <LinearLayout
        android:id="@+id/linearlayout_docs_upload_folder_item_icon_bg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/document_icon_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_folder_item_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/folder" />
    </LinearLayout>


    <TextView
        android:id="@+id/textview_folder_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/linearlayout_docs_upload_folder_item_icon_bg"
        app:layout_constraintTop_toTopOf="@+id/linearlayout_docs_upload_folder_item_icon_bg"
        tools:text="2024 회의록" />

    <TextView
        android:id="@+id/textview_folder_item_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toStartOf="@+id/textview_folder_item_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_folder_item_title"
        tools:text="2024-03-12 오후 11:07" />

</androidx.constraintlayout.widget.ConstraintLayout>