...
    <item
        android:id="@+id/item_main_main"
        android:icon="@drawable/nav_item_main"
        android:title="@string/main_home" />

    <item
        android:id="@+id/item_main_folder"
        android:icon="@drawable/folder_detail"
        android:title="@string/folder" />

    <item
        android:id="@+id/item_main_upload"
        android:icon="@drawable/upload"
...
